--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,10 +14,27 @@
         tools:targetApi="31">
 
         <activity
-            android:name=".RegisterActivity"
+            android:name=".AdminLoginActivity"
+            android:windowSoftInputMode="adjustPan"
+            android:exported="false" />
+        <activity
+            android:name=".StudentLoginActivity"
+
+            android:exported="false" />
+        <activity
+            android:name=".CrLoginActivity"
+            android:windowSoftInputMode="adjustPan"
+            android:exported="false" />
+        <activity
+            android:name=".TeacherLoginActivity"
+            android:windowSoftInputMode="adjustPan"
             android:exported="false" />
         <activity
             android:name=".MainActivity"
+            android:exported="false" />
+        <activity
+
+            android:name=".RegisterActivity"
             android:exported="true"
             android:theme="@style/Theme.Unimate">
             <intent-filter>
