--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,29 +12,29 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.Unimate"
         tools:targetApi="31">
-
-        <activity
-            android:name=".AdminLoginActivity"
-            android:windowSoftInputMode="adjustPan"
-            android:exported="false" />
-        <activity
-            android:name=".StudentLoginActivity"
-
-            android:exported="false" />
-        <activity
-            android:name=".CrLoginActivity"
-            android:windowSoftInputMode="adjustPan"
-            android:exported="false" />
-        <activity
-            android:name=".TeacherLoginActivity"
-            android:windowSoftInputMode="adjustPan"
-            android:exported="false" />
         <activity
             android:name=".MainActivity"
             android:exported="false" />
         <activity
-
+            android:name=".AdminLoginActivity"
+            android:exported="false"
+            android:windowSoftInputMode="adjustPan" />
+        <activity
+            android:name=".StudentLoginActivity"
+            android:exported="false" />
+        <activity
+            android:name=".CrLoginActivity"
+            android:exported="false"
+            android:windowSoftInputMode="adjustPan" />
+        <activity
+            android:name=".TeacherLoginActivity"
+            android:exported="false"
+            android:windowSoftInputMode="adjustPan" />
+        <activity
             android:name=".RegisterActivity"
+            android:exported="false" />
+        <activity
+            android:name=".Guest_HomePage"
             android:exported="true"
             android:theme="@style/Theme.Unimate">
             <intent-filter>
