--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,7 +13,10 @@
         android:theme="@style/Theme.Unimate"
         tools:targetApi="31">
         <activity
-            android:name=".MainActivity"
+            android:name=".VerificationActivity"
+            android:exported="false" />
+        <activity
+            android:name=".Guest_HomePage"
             android:exported="false" />
         <activity
             android:name=".AdminLoginActivity"
@@ -34,7 +37,7 @@
             android:name=".RegisterActivity"
             android:exported="false" />
         <activity
-            android:name=".Guest_HomePage"
+            android:name=".MainActivity"
             android:exported="true"
             android:theme="@style/Theme.Unimate">
             <intent-filter>
