--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,7 +12,12 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.Unimate"
         tools:targetApi="31">
-
+        <activity
+            android:name=".Upload"
+            android:exported="false" />
+        <activity
+            android:name=".StudentProfile"
+            android:exported="false" />
         <activity
             android:name=".TeacherHomepage"
             android:exported="false" />
