teacher cr homepage create

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,9 @@
         android:theme="@style/Theme.Unimate"
         tools:targetApi="31">
         <activity
+            android:name=".CR_HomePage"
+            android:exported="false" />
+        <activity
             android:name=".RoomsActivity"
             android:exported="false" />
         <activity
