--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,9 @@
         android:theme="@style/Theme.Unimate"
         tools:targetApi="31">
         <activity
+            android:name=".MainActivity"
+            android:exported="false" />
+        <activity
             android:name=".CR_HomePage"
             android:exported="false" />
         <activity
@@ -64,7 +67,7 @@
             android:name=".RegisterActivity"
             android:exported="false" />
         <activity
-            android:name=".MainActivity"
+            android:name=".UploadCsvActivity"
             android:exported="true"
             android:theme="@style/Theme.Unimate">
             <intent-filter>
