--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,9 @@
         android:theme="@style/Theme.Unimate"
         tools:targetApi="31">
         <activity
+            android:name=".RoutineUpload"
+            android:exported="false" />
+        <activity
             android:name=".CR_HomePage"
             android:exported="false" />
         <activity
@@ -22,7 +25,7 @@
             android:name=".StudentHomePage"
             android:exported="false" />
         <activity
-            android:name=".Upload"
+            android:name=".RoomUpload"
             android:exported="false" />
         <activity
             android:name=".StudentProfile"
