--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -8,6 +8,7 @@ espressoCore = "3.6.1"
 appcompat = "1.7.0"
 material = "1.12.0"
 constraintlayout = "2.2.0"
+materialCalendarView = "1.6.0"
 materialCalendarViewVersion = "1.9.0-rc04"
 navigationFragment = "2.6.0"
 navigationUi = "2.6.0"
@@ -17,6 +18,7 @@ lifecycleViewmodelKtx = "2.8.7"
 opencsv = "5.7.1"
 playServicesAuth = "21.3.0"
 playServicesBase = "18.5.0"
+prolificinteractiveMaterialCalendarview = "2.0.1"
 subsamplingScaleImageView = "3.10.0"
 googleGmsGoogleServices = "4.4.2"
 firebaseAuth = "23.1.0"
@@ -35,6 +37,8 @@ espresso-core = { group = "androidx.test.espresso", name = "espresso-core", vers
 appcompat = { group = "androidx.appcompat", name = "appcompat", version.ref = "appcompat" }
 material = { group = "com.google.android.material", name = "material", version.ref = "material" }
 constraintlayout = { group = "androidx.constraintlayout", name = "constraintlayout", version.ref = "constraintlayout" }
+material-calendar-view-v160 = { module = "com.applandeo:material-calendar-view", version.ref = "materialCalendarView" }
+material-calendarview = { module = "com.prolificinteractive:material-calendarview", version.ref = "prolificinteractiveMaterialCalendarview" }
 navigation-fragment = { group = "androidx.navigation", name = "navigation-fragment", version.ref = "navigationFragment" }
 navigation-ui = { group = "androidx.navigation", name = "navigation-ui", version.ref = "navigationUi" }
 activity = { group = "androidx.activity", name = "activity", version.ref = "activity" }
