room picture upload

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -34,7 +34,7 @@
             android:name=".StudentHomePage"
             android:exported="false" />
         <activity
-            android:name=".Upload"
+            android:name=".RoomCSVUpload"
             android:exported="false" />
         <activity
             android:name=".StudentProfile"
