--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,6 +16,10 @@
         android:theme="@style/Theme.Unimate"
         tools:targetApi="31">
         <activity
+            android:name=".LoadingActivity"
+            android:exported="false"
+            android:theme="@style/Theme.Transparent" />
+        <activity
             android:name=".CalendarActivity"
             android:exported="false" />
         <activity
