--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,9 +17,9 @@
         tools:targetApi="31">
         <activity
 
-            android:name=".TeacherCalendarActivity"
+            android:name=".TeacherRoutineActivity"
             android:exported="false" />
-
+        <activity
             android:name=".LoadingActivity"
             android:exported="false"
             android:theme="@style/Theme.Transparent" />
