--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,8 +17,13 @@
         tools:targetApi="31">
         <activity
 
+            android:name=".TeacherCalendarActivity"
+            android:exported="false" />
+        <activity
+
             android:name=".TeacherRoutineActivity"
             android:exported="false" />
+
         <activity
             android:name=".LoadingActivity"
             android:exported="false"
