--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,19 +16,18 @@
         android:theme="@style/Theme.Unimate"
         tools:targetApi="31">
         <activity
-
+            android:name=".MapActivity"
+            android:exported="false" />
+        <activity
             android:name=".TeacherCalendarActivity"
             android:exported="false" />
         <activity
-
             android:name=".TeacherRoutineActivity"
             android:exported="false" />
-
         <activity
             android:name=".LoadingActivity"
             android:exported="false"
             android:theme="@style/Theme.Transparent" />
-
         <activity
             android:name=".CalendarActivity"
             android:exported="false" />
