--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,6 +16,12 @@
         android:theme="@style/Theme.Unimate"
         tools:targetApi="31">
         <activity
+            android:name=".ViewRetakesActivity"
+            android:exported="false" />
+        <activity
+            android:name=".AddRetakeActivity"
+            android:exported="false" />
+        <activity
             android:name=".ContactDevelopersActivity"
             android:exported="false" />
         <activity
